fix(html): Fix site title line break on desktop

--- a/themes/even/sass/_header.scss
+++ b/themes/even/sass/_header.scss
@@ -6,6 +6,7 @@
   .logo {
     font-family: Chancery, cursive, LiSu, sans-serif;
     font-weight: 400;
+    white-space: nowrap;
 
     a {
       color: #34495e;
